--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ click>=8.0.0
 prompt-toolkit>=3.0.0
 ollama>=0.1.0
 rich>=13.0.0
-tree-sitter>=0.20.0
+tree-sitter>=0.20.0,<0.22.0
 tree-sitter-python>=0.20.0
 watchdog>=3.0.0
 chromadb>=0.4.0
