--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-click>=8.0.0
-prompt-toolkit>=3.0.0
 llama-cpp-python>=0.2.0
+langchain>=0.1.0
+langchain-community>=0.0.20
+langgraph>=1.0.0
+textual>=0.45.0
 rich>=13.0.0
-tree-sitter>=0.20.0
-tree-sitter-python>=0.20.0
-watchdog>=3.0.0
-tiktoken>=0.5.0
-psutil>=5.9.0
-gitignore-parser>=0.1.0
+pexpect>=4.8.0
 
