--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 llama-cpp-python>=0.2.0
 langchain>=0.1.0
+langchain-core>=0.1.0
+langgraph>=0.0.20
 langchain-community>=0.0.20
-langgraph>=1.0.0
-textual>=0.45.0
 rich>=13.0.0
-pexpect>=4.8.0
 
