--- a/azul-ui/package.json
+++ b/azul-ui/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "ink": "^4.4.1",
-    "react": "^18.2.0",
-    "ws": "^8.16.0",
-    "ink-text-input": "^5.0.1",
+    "ink-box": "^2.0.0",
     "ink-spinner": "^5.0.0",
-    "ink-box": "^3.0.0"
+    "ink-text-input": "^5.0.1",
+    "react": "^18.2.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
@@ -25,4 +25,3 @@
     "typescript": "^5.3.3"
   }
 }
-
