--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,10 +12,11 @@
     "dev": "tsc && node dist/main.js"
   },
   "dependencies": {
-    "node-llama-cpp": "^3.0.0",
-    "react": "^18.2.0",
+    "chalk": "^4.1.2",
+    "dotenv": "^17.2.3",
     "ink": "^4.4.1",
-    "chalk": "^4.1.2"
+    "node-llama-cpp": "^3.0.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -23,4 +24,3 @@
     "typescript": "^5.3.3"
   }
 }
-
